# MolBatch

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
docs/: architecture.md  cli.md  configuration.md  migration_notes.md  presets.md
examples/: demo.json  demo.toml  demo.yaml
src/molbatch/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  logging_utils.py  presets.py  runner.py  types.py
src/molbatch/backends/: __init__.py  base.py  chimerax.py  pymol.py  registry.py
src/molbatch/core/: __init__.py  colors.py  planner.py  reports.py
src/molbatch/plugins/: hooks.py
src/molbatch/utils/: chains.py  files.py  names.py  platform.py  system.py
tests/: test_chain_parsing.py  test_chimerax_backend.py  test_config.py  test_planner.py  test_pymol_backend.py  test_reports.py
